<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_home_24"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navCustomers"
        android:icon="@drawable/ic_person_24"
        android:title="@string/nav_customers" />
    <item
        android:id="@+id/navPromos"
        android:icon="@drawable/ic_promo_star_24"
        android:title="@string/nav_promos" />
    <item
        android:id="@+id/navActivity"
        android:icon="@drawable/ic_notifications_24"
        android:title="@string/nav_activity" />
    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/ic_person_24"
        android:title="@string/nav_profile" />
</menu>
