<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_field">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Renvest.TextInput.Dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_business_name"
            app:placeholderText="@string/hint_business_name"
            app:startIconDrawable="@drawable/ic_store_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextBusinessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Renvest.TextInput.Dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_field"
            android:hint="@string/profile_settings_business_type"
            app:placeholderText="@string/dialog_business_type_placeholder"
            app:startIconDrawable="@drawable/ic_work_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextBusinessType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Renvest.TextInput.Dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_field"
            android:hint="@string/profile_settings_location"
            app:placeholderText="@string/dialog_business_location_placeholder"
            app:startIconDrawable="@drawable/ic_location_on_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextBusinessLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLines="2" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
