<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_field"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_field">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputPromoTitle"
            style="@style/Widget.Renvest.TextInput.Dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_promotion_title_hint"
            app:placeholderText="@string/dialog_promotion_title_placeholder"
            app:startIconDrawable="@drawable/ic_promo_star_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextPromoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:maxLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputPromoReward"
            style="@style/Widget.Renvest.TextInput.Dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_field"
            android:hint="@string/dialog_promotion_reward_hint"
            app:placeholderText="@string/dialog_promotion_reward_placeholder"
            app:startIconDrawable="@drawable/ic_card_gift_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextPromoReward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:maxLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputPromoExpiry"
            style="@style/Widget.Renvest.TextInput.Dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_field"
            android:hint="@string/dialog_promotion_expiry_hint"
            app:placeholderText="@string/dialog_promotion_expiry_placeholder"
            app:startIconDrawable="@drawable/ic_calendar_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextPromoExpiry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputPromoEnrolled"
            style="@style/Widget.Renvest.TextInput.Dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_field"
            android:hint="@string/dialog_promotion_enrolled_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextPromoEnrolled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:text="0" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputPromoRedeemed"
            style="@style/Widget.Renvest.TextInput.Dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_field"
            android:hint="@string/dialog_promotion_redeemed_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextPromoRedeemed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:text="0" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
